リフレッシュボタンを押した後breakする問題の修正とcrawle後のPublish処理の追加

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ MYSQL_PORT=3306
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_DATABASE=
+
+GOOGLE_APPLICATION_CREDENTIALS=
+PROJECT_ID=
+
+SADCAPTCHA_API_KEY=
