--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,18 @@ venv/
 .venv/
 *.log
 logs/
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyo
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
