agent_multiにローカル永続キューを追加
- 受信時にキュー保存→ACK→実行へ変更
- 起動時に未処理キューを再処理
- 失敗時は再Publish、成功時にキュー削除

--- a/crawler_bundle/agent_config.example.json
+++ b/crawler_bundle/agent_config.example.json
@@ -1,6 +1,9 @@
 {
   "project_id": "tiktok-analytics-prod-451609",
   "credentials_path": "C:\\keys\\gcp-sa.json",
+  "retry_topic": "crawler-auto-jobs",
+  "max_retries": 3,
+  "queue_dir": "C:\\Users\\Administrator\\TikTokCrawlSel_v2\\queue",
   "subscriptions": [
     {
       "subscription_name": "pc-01-s1",
